fix text-align

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -6,9 +6,5 @@
     margin-top: 3rem;
     font-size: 18px;
     font-weight: 300;
-
-    @include media(phone) {
-      font-size: $font-size-mobile;
-    }
   }
 }
