--- a/src/components/Education/Education.scss
+++ b/src/components/Education/Education.scss
@@ -10,7 +10,6 @@
     display: flex;
     flex-direction: column;
     margin-top: 2rem;
-    text-align: justify;
 
     &-header {
       display: flex;
@@ -48,10 +47,6 @@
       font-size: $font-size-desktop;
       font-weight: 300;
       @include text-border;
-
-      @include media(phone) {
-        font-size: $font-size-mobile;
-      }
     }
   }
 
