--- a/src/components/Wrapper/Wrapper.scss
+++ b/src/components/Wrapper/Wrapper.scss
@@ -7,6 +7,7 @@
   padding-bottom: 6rem;
   padding: 2.5rem;
   max-width: 1400px;
+  min-width: 300px;
   border-top: 3px solid $green;
   border-bottom: 3px solid $green;
   margin: 0px auto 0px auto;
